# MTUI

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  data.json  index.html  openapi.yaml  remote_run.sh  snapcraft.yaml
.github/resources/: demo.py
.github/workflows/: ci.yml  pages.yml  release.yml
mario-game/: README.md  index.html
snap/: snapcraft.yaml
src/: api.rs  app.rs  compat.rs  config.rs  constants.rs  custom.rs  data.rs  event.rs  handler.rs  input.rs  interpretator.rs  lib.rs  logger.rs  main.rs  mock.rs  modbus.rs  num_ops.rs  register.rs  state.rs  tui.rs  ui.rs  writes_log.rs
src/app/: api.rs  columns.rs  config_io.rs  custom.rs  discovery.rs  help.rs  lifecycle.rs  logs.rs  mod.rs  panel.rs  search.rs  settings.rs  slave.rs  sweep.rs  write.rs
src/tui/: hints.rs  make_bottom_title.rs  make_top_title.rs  mod.rs  render.rs  terminal.rs  theme.rs
src/tui/draw_state/: discovery.rs  dump.rs  help.rs  jump.rs  label.rs  logs.rs  mod.rs  read.rs  save.rs  search.rs  settings.rs  write.rs
src/tui/draw_state/popups/: about.rs  columns.rs  confirm.rs  custom.rs  device_id.rs  discovery.rs  help.rs  import.rs  inspect.rs  label.rs  logs.rs  mod.rs  raw.rs  search.rs  slave.rs  stats.rs  sweep_config.rs  write.rs
