[package]
name = "mtui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.1"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }

tokio-modbus = { version = "0.17.0", default-features = false, features = ["rtu", "tcp"] } # device
tokio-serial = { version = "5.4.5" }
async-trait = "0.1.89"
num-traits = "0.2.19"

anyhow = "1.0.102"
serde_json = "1.0.150"
chrono = "0.4"
arboard = { version = "3", default-features = false }
log = "0.4"
axum = "0.8"
local-ip-address = "0.6.13"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
