[package]
name = "mtui"
version = "0.9.2"
edition = "2021"
license = "GPL-2.0-only"
description = "An extensive Modbus client for your terminal."
repository = "https://github.com/inowattio/mtui"
homepage = "https://inowattio.github.io/MTUI/"
readme = "README.md"
keywords = ["modbus", "tui", "rtu", "terminal", "client"]
categories = ["command-line-utilities", "network-programming"]
default-run = "mtui"
exclude = [".github/"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ binary-ext }"
pkg-fmt = "bin"

[[bin]]
name = "mtui"
path = "src/main.rs"

[[bin]]
name = "mtui-web"
path = "src/bin/web.rs"
required-features = ["web"]

[features]
web = []

[dependencies]
ratatui = { version = "0.30.2", default-features = false, features = ["serde"] }
tokio = { version = "1.53.1", default-features = false, features = ["sync", "macros"] }
futures = "0.3.33"
futures-timer = { version = "3.0.4", features = ["wasm-bindgen"] }
web-time = "1"
serde = { version = "1.0.229", features = ["derive"] }

tokio-modbus = { version = "0.17.0", default-features = false } # device
async-trait = "0.1.91"
num-traits = "0.2.19"

anyhow = "1.0.104"
serde_json = "1.0.151"
chrono = "0.4"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.53.1", features = ["full"] }
tokio-modbus = { version = "0.17.0", default-features = false, features = ["rtu", "tcp"] }
tokio-serial = { version = "5.5.0" }
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
axum = "0.8"
local-ip-address = "0.6.13"
clap = { version = "4.6.3", features = ["derive"] }
directories = "6"
memory-stats = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratzilla = "0.3.1"
critical-section = { version = "1", features = ["std"] }
wasm-bindgen-futures = "0.4"
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
